Reservation One way mapping with movie, member

--- a/src/main/resources/templates/reservation/reservation_form.html
+++ b/src/main/resources/templates/reservation/reservation_form.html
@@ -76,6 +76,13 @@
                 });
 
             });
+
+
+            // 다음 할일 : 구체적 지역까지 띄우고 다시 영화 이름 눌렀을 때 다 삭제 되게 해야 될듯
+            // 아니면 초기화 버튼도 좋고, 일단 cgv 사이트 참고해서 만들어보자
+
+            // 예약관련 비즈니스 로직도 싹 다듬어야 될듯
+
         </script>
 
     </th:block>
