Movie Info enum converter,, view...

--- a/src/main/resources/templates/movies/movie_create.html
+++ b/src/main/resources/templates/movies/movie_create.html
@@ -5,7 +5,7 @@
     <th:block th:fragment="content">
     <h1 class="mt-4">관리자 권한 : 영화 추가 화면</h1>
 
-    <form th:action="@{/movie/create}" method="post">
+    <form th:action="@{/movies/create}" method="post">
         <div class="form-group">
             <label >영화 제목 : </label>
             <input type="text" class="form-control" name="name" size="50" placeholder="제목 입력란" /><br/>
