--- a/src/main/resources/templates/layout/content.html
+++ b/src/main/resources/templates/layout/content.html
@@ -72,7 +72,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+            <p class="m-0 text-center text-white">Copyright &copy; HCY MovieTheater 2021</p>
         </div>
         <!-- /.container -->
     </footer>
