--- a/src/main/resources/templates/reservation/reservation_list.html
+++ b/src/main/resources/templates/reservation/reservation_list.html
@@ -1,36 +1,37 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org"> <head th:replace="fragments/header :: header"/> <body>
-<div class="container">
-    <div th:replace="fragments/bodyHeader :: bodyHeader"/>
-        <div>
+<html xmlns:th="http://www.thymeleaf.org">
+<th:block th:replace="~{/layout/content :: setContent(~{this :: content})}">
+    <th:block th:fragment="content">
+        <div class="container">
             <div>
-                <form th:object="${reservationSearch}" class="form-inline">
-                    <div class="form-group mb-2">
-                    <input type="text" th:field="*{memberName}" class="form-control" placeholder="회원명"/>
-                    <input type="text" th:field="*{movieName}" class="form-control" placeholder="영화명"/>
-                    </div>
-                        <div class="form-group mx-sm-1 mb-2">
-                            <select th:field="*{reservationStatus}" class="form-control"> <option value="">예약상태</option>
-                                <option th:each="status : ${T(ChanuE.MovieTheater.domain.ReservationStatus).values()}"
-                                        th:value="${status}"
-                                        th:text="${status}">option
-                                </option>
-                            </select>
+                <div>
+                    <form th:object="${reservationSearch}" class="form-inline">
+                        <div class="form-group mb-2">
+                        <input type="text" th:field="*{memberName}" class="form-control" placeholder="회원명"/>
+                        <input type="text" th:field="*{movieName}" class="form-control" placeholder="영화명"/>
                         </div>
-                <button type="submit" class="btn btn-primary mb-2">검색</button>
-                </form>
-            </div>
-            <table class="table table-striped"> <thead>
-                <tr>
-                    <th>#</th>
-                    <th>회원명</th>
-                    <th>예약자 성함</th>
-                    <th>영화 이름</th>
-                    <th>예약 상태</th>
-                </tr>
-                </thead>
+                            <div class="form-group mx-sm-1 mb-2">
+                                <select th:field="*{reservationStatus}" class="form-control"> <option value="">예약상태</option>
+                                    <option th:each="status : ${T(ChanuE.MovieTheater.domain.ReservationStatus).values()}"
+                                            th:value="${status}"
+                                            th:text="${status}">option
+                                    </option>
+                                </select>
+                            </div>
+                    <button type="submit" class="btn btn-primary mb-2">검색</button>
+                    </form>
+                </div>
+                <table class="table table-striped"> <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>회원명</th>
+                        <th>예약자 성함</th>
+                        <th>영화 이름</th>
+                        <th>예약 상태</th>
+                    </tr>
+                    </thead>
                     <tbody>
-                    <tr th:each="booking : ${reservations}">
+                    <tr th:each="booking : ${result.dtoList}">
                         <td th:text="${booking.id}"></td>
                         <td th:text="${booking.memberName}"></td>
                         <td th:text="${booking.movieName}"></td>
@@ -42,15 +43,30 @@
                     </tbody>
                 </table>
             </div>
-    <div th:replace="fragments/footer :: footer"/> </div> <!-- /container -->
-</body>
-<script>
-function cancel(id) {
-    var form = document.createElement("form");
-    form.setAttribute("method", "post");
-    form.setAttribute("action", "/reservation/" + id + "/cancel");
-    document.body.appendChild(form);
-    form.submit();
-}
-</script>
+        </div>
+
+        <ul class="pagination h-100 justify-content-center align-items-center">
+            <li class="page-item " th:if="${result.prev}">
+                <a class="page-link" th:href="@{/movie/list(page=${result.start-1})}" tabindex="-1">PREVIOUS</a>
+            </li>
+            <li th:class=" 'page-item ' + ${result.page == page?'active':''}" th:each="page : ${result.pageList}"}>
+                <a class="page-link" th:href="@{/movie/list(page=${page})}">[[${page}]]</a>
+            </li>
+            <li class="page-item" th:if="${result.next}">
+                <a class="page-link" th:href="@{/movie/list(page=${result.end+1})}">NEXT</a>
+            </li>
+        </ul>
+
+        <script th:inline="javascript">
+        function cancel(id) {
+            var form = document.createElement("form");
+            form.setAttribute("method", "post");
+            form.setAttribute("action", "/reservation/" + id + "/cancel");
+            document.body.appendChild(form);
+            form.submit();
+        }
+        </script>
+
+    </th:block>
+</th:block>
 </html>
