--- a/src/main/resources/templates/movies/movie_list.html
+++ b/src/main/resources/templates/movies/movie_list.html
@@ -42,7 +42,7 @@
                 <li class="page-item " th:if="${result.prev}">
                     <a class="page-link" th:href="@{/movies/list(page=${result.start-1})}" tabindex="-1">PREVIOUS</a>
                 </li>
-                <li th:class=" 'page-item ' + ${result.page == page?'active':''}" th:each="page : ${result.pageList}"}>
+                <li th:class=" 'page-item ' + ${result.page == page?'active':''}" th:each="page : ${result.pageList}">
                     <a class="page-link" th:href="@{/movies/list(page=${page})}">[[${page}]]</a>
                 </li>
                 <li class="page-item" th:if="${result.next}">
