--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -61,7 +61,7 @@
 
       <div class="col-lg-3">
 
-        <h1 class="my-4">Shop Name</h1>
+        <h1 class="my-4">차니와 웅아의 찌부찌부 영화관!!!</h1>
         <div class="list-group">
           <a href="/movies/info" class="list-group-item">영화</a>
           <a href="#" class="list-group-item">Category 2</a>
