Movie Review Count, Average

--- a/src/main/resources/templates/movies/movie_info.html
+++ b/src/main/resources/templates/movies/movie_info.html
@@ -21,6 +21,7 @@
                     <th scope="col">Title</th>
                     <th scope="col">Director</th>
                     <th scope="col">RunningTime</th>
+                    <th scope="col">Review Average</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -46,6 +47,7 @@
                     </th>
                     <td>[[${movie.director}]]</td>
                     <td>[[${movie.runningTime}]]</td>
+                    <td>[[${movie.gradeAvg}]]</td>
                 </tr>
                 </tbody>
             </table>
