Refactor Area, SpecificArea .. -ing..

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
             <a class="btn btn-lg btn-dark" href="/movies/create">영화 생성</a>
             <a class="btn btn-lg btn-dark" href="/movies/list">영화 목록</a> </p>
         <p class="lead">예약 기능</p> <p>
-            <a class="btn btn-lg btn-info" href="/reservation/create">영화 예약</a>
+            <a class="btn btn-lg btn-info" href="/reservations/create">영화 예약</a>
             <a class="btn btn-lg btn-info" href="/reservations">예약 내역</a> </p>
     </div>
 
