--- a/src/main/resources/templates/reservations/reservation_list.html
+++ b/src/main/resources/templates/reservations/reservation_list.html
@@ -47,13 +47,13 @@
 
         <ul class="pagination h-100 justify-content-center align-items-center">
             <li class="page-item " th:if="${result.prev}">
-                <a class="page-link" th:href="@{/movie/list(page=${result.start-1})}" tabindex="-1">PREVIOUS</a>
+                <a class="page-link" th:href="@{/reservations(page=${result.start-1})}" tabindex="-1">PREVIOUS</a>
             </li>
             <li th:class=" 'page-item ' + ${result.page == page?'active':''}" th:each="page : ${result.pageList}"}>
-                <a class="page-link" th:href="@{/movie/list(page=${page})}">[[${page}]]</a>
+                <a class="page-link" th:href="@{/reservations(page=${page})}">[[${page}]]</a>
             </li>
             <li class="page-item" th:if="${result.next}">
-                <a class="page-link" th:href="@{/movie/list(page=${result.end+1})}">NEXT</a>
+                <a class="page-link" th:href="@{/reservations/list(page=${result.end+1})}">NEXT</a>
             </li>
         </ul>
 
@@ -61,7 +61,7 @@
         function cancel(id) {
             var form = document.createElement("form");
             form.setAttribute("method", "post");
-            form.setAttribute("action", "/reservation/" + id + "/cancel");
+            form.setAttribute("action", "/reservations/" + id + "/cancel");
             document.body.appendChild(form);
             form.submit();
         }
