Cinema list, create

--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -64,7 +64,7 @@
         <h1 class="my-4">차니와 웅아의 찌부찌부 영화관!!!</h1>
         <div class="list-group">
           <a href="/movies/info" class="list-group-item">영화</a>
-          <a href="#" class="list-group-item">Category 2</a>
+          <a href="/theaters/all" class="list-group-item">극장</a>
           <a href="#" class="list-group-item">Category 3</a>
         </div>
 
