Cinema Time create list, movie bug fix

--- a/src/main/resources/templates/cinemas/cinema_list.html
+++ b/src/main/resources/templates/cinemas/cinema_list.html
@@ -42,7 +42,11 @@
                 </thead>
                 <tbody>
                 <tr th:each="cinema : ${result.dtoList}">
-                    <td>[[${cinema.name}]]</td>
+                    <th scope="row">
+                        <a th:href="@{/times/{id}/all (id=${cinema.id})}">
+                            [[${cinema.name}]]
+                        </a>
+                    </th>
                     <td>[[${cinema.display}]]</td>
                     <td>[[${cinema.movieName}]]</td>
                     <td>[[${cinema.seats}]]</td>
